ingress-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"web-ingress","namespace":"default"},"spec":{"ingressClassName":"nginx","rules":[{"host":"web.local.com","http":{"paths":[{"backend":{"service":{"name":"web-service","port":{"number":80}}},"path":"/","pathType":"Prefix"},{"backend":{"service":{"name":"api-service","port":{"number":80}}},"path":"/api","pathType":"Prefix"}]}}]}}
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: "2024-06-10T22:46:47Z"
  generation: 1
  name: web-ingress
  namespace: default
  resourceVersion: "1333477"
  uid: d5960215-f7ac-4a98-9351-b58a895fe276
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: web-service
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: api-service
            port:
              number: 80
        path: /api
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: localhost
